templates/countrywidedist/css/all.css
/* ... */
@media only screen and (max-width: 768px) {
	h1 {
		font-size: 2.6em;
	}
	#header #top-header .search {
		float: inherit;
		display: inline-block;
	}
	#header #menu-navigation .nav-mobile {
		position: absolute;
		right: 15px;
		top: 70px;
	}
	.owl-carousel .owl-nav {
		display: none;
	}
	.section.section-colum-fbs [class^="col-"],
	.section.section-our-client [class^="col-"] {
		margin-bottom: 40px;
	}
	.section.section-choose .col-choose {
		margin-bottom: 40px;
	}
	.section.section-product-column .col-p {
		margin-bottom: 30px;
	}
	.main-footer > .container > .row [class^="col-"] > div {
		border-bottom: 1px #ccc dotted;
		padding-bottom: 10px;
		margin-bottom: 10px;
	}
	.main-footer > .container > .row [class^="col-"]:last-child > div {
		padding-bottom: 0;
		margin-bottom: 0;
		border-bottom: none;
	}
}
@media (min-width: 320px) and (max-width: 480px) {
	#header #top-header .search {
		margin-right: 40px;
	}
}


#callnowbutton {
	display:none;
}
@media screen and (max-width: 650px)  {
	#callnowbutton {
		display: block;
		position: fixed;
		text-decoration: none;
		z-index: 2147483647;
		width: 100%;
		left: 0;
		bottom: 0;
		height: 60px;
		border-top: 1px solid #31daec;
		border-bottom: 1px solid #007b8d;
		width: 100%;
		left: 0;
		bottom: 0;
		height: 60px;
		border-top: 1px solid #31daec;
		border-bottom: 1px solid #007b8d;
		text-shadow: 0 1px #007b8d;
		text-align: center;
		color: #fff;
		font-weight: 600;
		font-size: 23px;
		padding-right: 27px;
		overflow: hidden;
		background: #04adbf;
		display: flex;
		justify-content: center;
		align-items: center;
	}
}
@media (min-width: 1280px) and (max-width: 1480px) {
	.section.section-captions > .row > .item-c .text-wrapper .verti {
		top: 36%!important;
	}
}
/* Smartphones (portrait) ----------- */
@media only screen
and (min-device-width: 320px)
and (max-device-width: 736px)
and (-webkit-min-device-pixel-ratio: 2)
and (orientation: portrait) {
	.ccms_form_element select {
		width:100%;
		height: 35px;
	}
	.ccms_form_element input[type="text"] {
		width:100%;
		height: 35px;
	}
	.ccms_form_element textarea {
		width:100%;
	}


	.cfdiv_checkboxgroup label {
		margin-right: 10px;
	}
	.item-b {
		width:40%;
		margin:auto;
	}
}

/* Desktops and laptops ----------- */
@media only screen
and (min-width : 1224px) {
	.owl-item {
		width:150px!important;
		margin-right:20px!important;
	}
}

@media only screen and (max-width:980px){
	.main-content {
		position: relative;
		z-index: 10;
	}

	#menu-navigation .menu {
		overflow-y: scroll;
	}
	#header #menu-navigation ul > li.parent > ul {
		z-index: 9999;
	}
}

